--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -94,6 +94,6 @@ $enable-rtl: true; /* stylelint-disable-line scss/dollar-variable-default */
 @import './pages/settings/initiatecycle/initiatecycle';
 @import './pages/resignationlist/resignationlist';
 @import  './pages/errorpage/errorpage';
-
+@import './pages/notifications/notifications';
 
 
