--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -441,3 +441,16 @@ input.capetalized {
 //   color: white;
 //   border-radius: 3px;
 // }
+.nav-item.notification{
+  .dropdown-menu{
+    min-width: 275px !important;
+    
+  }
+  .text-muted{
+    pointer-events: none;
+    font-size: 1.2em !important;
+  }
+  .dropdown-item{
+    padding: 15px !important;
+  }
+}
