--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -457,3 +457,17 @@ input.capetalized {
 .actions{
   min-width: 126px;
 }
+.star-rating {
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.star {
+  color: #ccc;
+  transition: color 0.3s;
+}
+
+.star.selected
+ {
+  color: #21568b;
+}
