Resolved Failed Testcases and Css Isuues

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -474,3 +474,10 @@ input.capetalized {
   background-color: #fff;
     box-shadow: none;
 }
+.closeClient-btn{
+  padding-right: 0 !important;
+  text-align: right;
+  .me-1{
+    margin-right: -4px !important;
+  }
+}
