Resoled Css Isuues

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -481,3 +481,8 @@ input.capetalized {
     margin-right: -4px !important;
   }
 }
+.CheckList-view{
+  th{
+    vertical-align: top !important;
+  }
+}
