--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -299,6 +299,7 @@ input.capetalized {
 }
 .checkList-table td {
   border-bottom: none;
+  
 }
 .project-view-text-header h3 {
   font-size: 24px;
@@ -485,4 +486,15 @@ input.capetalized {
   th{
     vertical-align: top !important;
   }
+}
+.auditorsLabel {
+  margin-bottom: 0 !important;
+  td{
+    display: inline;
+    padding: 0 17px 0 0 !important;
+   
+  }
+}
+.sqa-btn{
+  width: 30px;
 }
