--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -498,3 +498,15 @@ input.capetalized {
 .sqa-btn{
   width: 30px;
 }
+.export-Warranty{
+  position: absolute;
+  right: 0;
+}
+.asset-Warranty{
+  position: relative;
+  z-index: 999;
+}
+.project-no-records{
+background-color: #fff !important;
+    border-bottom: none;
+}
