--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -46,6 +46,24 @@ body {
   color: white;
 }
 
+.bq-open::before {
+  color: rgba(0, 0, 0, 0.3);
+  content: open-quote;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+
+.star {
+  color: #ccc;
+  transition: color 0.3s;
+}
+.star.selected {
+  color: #21568b;
+}
+
 .btn-download {
   background-color: $blue-btnBg;
   border-color: $blue-btnBorder;
@@ -299,7 +317,6 @@ input.capetalized {
 }
 .checkList-table td {
   border-bottom: none;
-  
 }
 .project-view-text-header h3 {
   font-size: 24px;
@@ -468,47 +485,46 @@ input.capetalized {
   padding-left: 0;
   padding-right: 0;
 }
-.client-No-Records{
+.client-No-Records {
   border-bottom: 1px solid #d8dbd0;
 }
 .client-No-Records .text-start {
   background-color: #fff;
-    box-shadow: none;
+  box-shadow: none;
 }
-.closeClient-btn{
+.closeClient-btn {
   padding-right: 0 !important;
   text-align: right;
-  .me-1{
+  .me-1 {
     margin-right: -4px !important;
   }
 }
-.CheckList-view{
-  th{
+.CheckList-view {
+  th {
     vertical-align: top !important;
   }
 }
 .auditorsLabel {
   margin-bottom: 0 !important;
-  td{
+  td {
     display: inline;
     padding: 0 17px 0 0 !important;
-   
   }
 }
-.sqa-btn{
+.sqa-btn {
   width: 30px;
 }
-.export-Warranty{
+.export-Warranty {
   position: absolute;
   right: 0;
 }
-.asset-Warranty{
+.asset-Warranty {
   position: relative;
   z-index: 999;
 }
-.project-no-records{
-background-color: #fff !important;
-    border-bottom: none;
+.project-no-records {
+  background-color: #fff !important;
+  border-bottom: none;
 }
-// custom - 3 
+// custom - 3
 // Normal - 9
