Resolved bug fixes

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -512,3 +512,22 @@ background-color: #fff !important;
 }
 // custom - 3 
 // Normal - 9
+.job-actions i.fa {
+  width: 12px;
+}
+.viewJob-Edit{
+  position: absolute;
+  right: 10px;
+}
+.view-job-description p {
+  margin-bottom: 0;
+}
+.view-job-description table {
+  margin-top: 0.5rem;
+}
+.header-nav .show > .nav-link{
+  color: #ffff;
+}
+.header-nav > .nav-link{
+  padding: 12px 12px;
+}
