Resolved bug fixes

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -527,5 +527,9 @@ input.capetalized {
 background-color: #fff !important;
     border-bottom: none;
 }
+.preview-Interview{
+  padding: 1px 5px;
+  font-size: 10px;
+}
 // custom - 3 
 // Normal - 9
