Resolved CSS issues

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -531,5 +531,13 @@ background-color: #fff !important;
   padding: 1px 5px;
   font-size: 10px;
 }
+.interview-blockquote {
+  fontSize: '12px';
+  maxWidth: '1000px';
+wordWrap: 'break-word';
+padding: '10px 20px';
+margin: '0 0 20px';
+borderLeft: '5px solid #eee';
+}
 // custom - 3 
 // Normal - 9
