--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -473,8 +473,9 @@ input.capetalized {
 }
 
 .star {
-  color: #ccc;
   transition: color 0.3s;
+  color: #a9a9a9;
+  font-size: 14px;
 }
 
 .star.selected
@@ -576,4 +577,12 @@ borderLeft: '5px solid #eee';
 }
 .milestone-actions i.fa{
   font-size: 12px;
+}
+
+.sh-timeline-card-list{
+  background-color: #fff;
+}
+.interview-save{
+  padding: 8px 13px;
+  line-height: 1;
 }
