--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -532,13 +532,13 @@ background-color: #fff !important;
   padding: 1px 5px;
   font-size: 10px;
 }
-.interview-blockquote {
-  fontSize: '12px';
-  maxWidth: '1000px';
-wordWrap: 'break-word';
+blockquote .interview-blockquote {
+  font-Size: '12px';
+  max-Width: '1000px';
+word-Wrap: 'break-word';
 padding: '10px 20px';
 margin: '0 0 20px';
-borderLeft: '5px solid #eee';
+border-left: '5px solid #eee';
 }
 // custom - 3 
 // Normal - 9
@@ -585,4 +585,22 @@ borderLeft: '5px solid #eee';
 .interview-save{
   padding: 8px 13px;
   line-height: 1;
+}
+.interview-name{
+  font-size: 18px;
+}
+
+.bq-open:before{
+  color: rgba(0,0,0,.3);
+  content: open-quote;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 4em;
+  line-height: .1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+blockquote{
+  padding: 10px 20px;
+  margin: 0 0 20px;
+  border-left: 5px solid #eee;
 }
