Resolved css issues

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -532,14 +532,6 @@ background-color: #fff !important;
   padding: 1px 5px;
   font-size: 10px;
 }
-blockquote .interview-blockquote {
-  font-Size: '12px';
-  max-Width: '1000px';
-word-Wrap: 'break-word';
-padding: '10px 20px';
-margin: '0 0 20px';
-border-left: '5px solid #eee';
-}
 // custom - 3 
 // Normal - 9
 .job-actions i.fa {
@@ -603,4 +595,8 @@ blockquote{
   padding: 10px 20px;
   margin: 0 0 20px;
   border-left: 5px solid #eee;
+}
+.investatble-form{
+  padding-right: 15px;
+  padding-left: 15px;
 }
