--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -107,6 +107,9 @@ thead.table-primary td {
 dd {
   margin-bottom: 0;
 }
+.checklist-title-hover:hover {
+  color: #428bca
+}
 
 .myprofile-wrapper {
   .card-header {
